# pytomicropy

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pytomicropy/: __main__.py  core.py
tests/: test_basic.py
